Pull request #917: Feature/AG-8668 Corrections for Filtering Log
Merge in EXTENSIONS/browser-extension from feature/AG-8668 to feature/AG-2737

Squashed commit of the following:

commit b275da060807669b77bdd7b6dcc9744116774365
Merge: b0b40c9a3 34fa7478c
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Mon Jun 21 15:46:10 2021 +0300

    Merge branch 'feature/AG-2737' into feature/AG-8668

commit b0b40c9a38b8d5667fd3cd5b3167da2ede61a033
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Mon Jun 21 14:39:01 2021 +0300

    add comments,  separate conditional rendering in request preview component

commit 5fea7539ce265d46f9107a2d38d2b16936fd0622
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Mon Jun 21 13:47:32 2021 +0300

    refactoring request preview state machine, fix styles

--- a/Extension/src/pages/filtering-log/components/Filters/EventsSearch/events-search.pcss
+++ b/Extension/src/pages/filtering-log/components/Filters/EventsSearch/events-search.pcss
@@ -2,6 +2,17 @@
     display: flex;
     align-items: center;
     position: relative;
+    margin-right: 16px;
+    border-right: 1px solid var(--gray300);
+
+    @media (prefers-color-scheme: dark) {
+        border-right: 1px solid var(--gray400);
+    }
+
+    @media (max-width: 640px) {
+        margin-right: 0;
+        border-right: none;
+    }
 
     & input {
         border: none;
@@ -69,6 +80,8 @@
 
 .light-mode {
     .events-search {
+        border-right: 1px solid var(--gray300);
+
         & input {
             color: var(--gray-base);
 
@@ -85,6 +98,8 @@
 
 .dark-mode {
     .events-search {
+        border-right: 1px solid var(--gray400);
+
         & input {
             color: var(--gray300);
 
